--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
 name = "poetry_issue_celery"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
-authors = ["ocavue <ocavue@gmail.com>"]
+authors = [""]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-celery = "3.1.23"
+python = "^3.5"
+celery = {version="3.1.23", source="douban"}
+
 [tool.poetry.dev-dependencies]
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+[[tool.poetry.source]]
+name = "douban"
+url = "https://pypi.douban.com/simple"
